--- a/frontend/src/components/Spots/SpotDetailPage.css
+++ b/frontend/src/components/Spots/SpotDetailPage.css
@@ -58,24 +58,23 @@
   margin-bottom: 10px;
 }
 
-.spot-description p {
+/* .spot-description p {
   font-size: 16px;
   line-height: 1.5;
-}
+} */
 
 .spot-callout-box {
-  flex: 1;
+  flex: 0 0 250px;
   border: 1px solid #ccc;
-  padding: 16px;
+  padding: 15px;
   border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
   height: fit-content;
 }
 
 .spot-callout-box p {
   font-size: 18px;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
 }
 
 .spot-callout-box button {
@@ -89,5 +88,5 @@
 }
 
 .spot-callout-box button:hover {
-  background-color: #e11c4f;
+  background-color: #e0484d;
 }
